syntax = "proto3";
package video;

service ServerStreamerService {
  rpc Stream(stream ServerStreamerMessage) returns (stream StreamerServerMessage);
}

message ServerStreamerMessage {
  oneof payload {
    ServerStreamerSource server_streamer_source = 1;

    ServerStreamerUploadStart server_streamer_upload_start = 2;
    ServerStreamerUploadChunk server_streamer_upload_chunk = 3;
    ServerStreamerUploadEnd server_streamer_upload_end = 4;
  }
}

message ServerStreamerSource {
  string source = 1;
}

message ServerStreamerUploadStart {

}

message ServerStreamerUploadChunk {
  bytes chunk = 1;
}

message ServerStreamerUploadEnd {
  string filename = 1;
}

message StreamerServerMessage {
  oneof payload {
    StreamerServerInfo streamer_server_info = 1;
    StreamerServerSegment streamer_server_segment = 2;
    StreamerServerNewSource streamer_server_new_source = 3;
    
    StreamerServerHeartbeat streamer_server_heartbeat = 4;
  }
}

message StreamerServerInfo {
  string info = 1;
}

message StreamerServerSegment {
  bytes segment = 1;
}

message StreamerServerNewSource {
  string filename = 1;
}

message StreamerServerHeartbeat {

}